--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "filesize": "^4.1.2",
+    "lodash": "^4.17.11",
     "react": "^16.8.6",
+    "react-circular-progressbar": "^1.2.0",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-dropzone": "^10.1.4",
+    "react-icons": "^3.6.1",
+    "react-scripts": "3.0.0",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
